--- a/src/assets/bar.html
+++ b/src/assets/bar.html
@@ -3,5 +3,9 @@
 
 <div id="recordBar">
     <span id="recordState" class=""></span>
-    <span id="recordData" style="visibility: hidden">-</span>
+    <span id="recordFuncs">
+        <button class="mouse" data-mode="mouse"></button>
+        <button class="keys" data-mode="keys"></button>
+        <button class="see" data-mode="see"></button>
+    </span>
 </div>
