--- a/tests/app/testweb.html
+++ b/tests/app/testweb.html
@@ -10,8 +10,11 @@
     </style>
 </head>
 <body>
-    <span id="bin-da" onclick="this.innerText = 'war da';">bin da</span>
+    <div id="bin-da" onclick="this.innerText = 'war da';">bin da</div>
+    <div id="bin-auch-da">
+        <button class="mitKlasse" onclick="this.innerText = 'war da';">bin da</button>
+    </div>
     <input name="textinput">
-    
+
 </body>
 </html>
