demo added, key actions, wait improved

--- a/src/assets/bar.html
+++ b/src/assets/bar.html
@@ -2,8 +2,10 @@
 <div id="recordBar">
     <span id="recordState" class=""></span>
     <span id="recordFuncs">
+        <button class="see" data-mode="see"></button>
+        <button class="wait" data-mode="wait"></button>
         <button class="mouse" data-mode="mouse"></button>
         <button class="keys" data-mode="keys"></button>
-        <button class="see" data-mode="see"></button>
+
     </span>
 </div>
